# rp2350-freeRTOS

./: CMakeLists.txt
2tasks/: CMakeLists.txt
Mutex/: CMakeLists.txt
Mutex/codewithout/: main.c
Semaphore/: CMakeLists.txt  main.c
doc/: build-steps-notes.txt  erros-test-read-crc16.txt  make_output.txt  notes-rp2350.txt  notes-testing.txt  path_setup.txt  pico-examples.txt  testing-rp2350-build.txt
freertos/: FreeRTOSConfig.h  port.c
freertos/FreeRTOS-Kernel/: CMakeLists.txt
freertos/FreeRTOS-Kernel/freertos/: FreeRTOSConfig.h
freertos/FreeRTOS-Kernel/klt-test/: CMakeLists.txt  main.c
freertos/FreeRTOS-Kernel/pico-lifting/: main.c
freertos/FreeRTOS-Kernel/rp2350-logic-analyzer/: rp2350-logic-analyzer.c
freertos/FreeRTOS-Kernel/test-read-crc16/: CMakeLists.txt  comprogs.h  main.c  main.c.128  pshell.h  vi.c
freertos/FreeRTOS-Kernel/test-read-crc16/test-files/: pshell.h
pico-lifting/: CMakeLists.txt
rp2350-logic-analyzer/: CMakeLists.txt
test-read/: CMakeLists.txt  Makefile  main.c  test-read.elf.map
test-read-crc16/: CMakeLists.txt  comprogs.h.128  main.c  vi.c
test-read-crc16/test-files/: CMakeLists.txt  main.c  make-errs.txt
