cmake_minimum_required(VERSION 3.12)
if (DEFINED ENV{FREERTOS_KERNEL_PATH} AND (NOT FREERTOS_KERNEL_PATH))
    set(FREERTOS_KERNEL_PATH $ENV{FREERTOS_KERNEL_PATH})
    message("Using FREERTOS_KERNEL_PATH from environment ('${FREERTOS_KERNEL_PATH}')")
endif ()

include(pico_sdk_import.cmake)

project(Pico-FreeRTOS)

pico_sdk_init()
#add_subdirectory(2tasks)
add_subdirectory(littlefs)
add_subdirectory(lifting)
add_subdirectory(cir-buf)
add_subdirectory(crc_crc16)
add_subdirectory(xmodem)
add_subdirectory(klt)
add_subdirectory(openjpeg)
add_subdirectory(klt-test)
add_subdirectory(pico-lifting)
add_subdirectory(rp2350-logic-analyzer)
#add_subdirectory(Semaphore)
#add_subdirectory(Mutex)
#add_subdirectory(test-read)
add_subdirectory(test-read-crc16)
